# Gtkmm-OpenGL-Template

./: .gitignore  CMakeLists.txt  Makefile  REAME.md
src/: enums.h  main.cpp
src/cameras/: baseprojection.h  cameramanager.cpp  cameramanager.h  orthographicprojection.cpp  orthographicprojection.h  perspectiveprojection.cpp  perspectiveprojection.h
src/common/: appstate.h  basetype.h
src/gui/: customglarea.cpp  customglarea.h  mainwindow.cpp  mainwindow.h
src/gui/tests/: glonlymainwindow.cpp  glonlymainwindow.h
src/objects/: crate.cpp  crate.h
src/shaders/: fs.glsl  shadermngr.cpp  shadermngr.h  vs.glsl
textures/: README.md
